# vdf_snark

./: Cargo.toml  README.md
belllady/: Cargo.toml
belllady/src/: lib.rs
belllady/src/groth16/: mapped_params.rs  mod.rs
belllady/src/groth16/aggregate/: proof.rs  prove.rs  srs.rs  transcript.rs  verify.rs
src/: main.rs  minroot.rs
