[package]
name = "sloth"
version = "0.1.0"
authors = ["mmaller <mary.maller@ethereum.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4"
bit-vec = "0.4.4"
byteorder = "1"
#bellperson = {version = "0.14.2", features = ["blstrs"]}
belllady = { path = "belllady", features = ["blstrs"] }
memmap = "0.7.0"

ff = { version = "0.3.0", package = "fff" }
rand_core = "0.5.1"
log = ""
fil_logger = ""
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.0"
groupy = "0.4.1"


rand_chacha = "0.2.2"
csv = "1.1.5"
itertools = "0.9.0"
rayon = "1.3.0"
