[package]
name = "belllady"
authors = [
  "Mary Maller <mary.maller@ethereum.org>",
  "dignifiedquire <me@dignifiedquire.com>",
  "Sean Bowe <ewillbefull@gmail.com>",
]
description = "zk-SNARK library"
documentation = "https://docs.rs/bellperson"
homepage = "https://github.com/filecoin-project/bellman"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/bellman"
version = "0.11.0"
readme = "README.md"
edition = "2018"

[dependencies]
bit-vec = "0.6"
blake2s_simd = "0.5"
ff = { version = "0.3.0", package = "fff" }
groupy = "0.4.1"
rand_core = "0.5"
byteorder = "1"
log = "0.4.8"
lazy_static = "1.4.0"
rand = "0.7"
rayon = "1.3.0"
memmap = "0.7.0"
thiserror = "1.0.10"
ahash = "0.5.6"
num_cpus = "1"
crossbeam-channel = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
digest = "0.9.0"
sha2 = "0.9"
itertools = "0.9.0"
bincode = "1.3.1"

# blst feature
blstrs = { version = "0.3", optional = true }

# pairing feature
paired = { version = "0.22.0", optional = true }

# gpu feature
ocl = { version = "0.19.4", package = "fil-ocl", optional = true }
ff-cl-gen = { version = "0.1.1", optional = true }
fs2 = { version = "0.4.3", optional = true }

[dev-dependencies]
hex-literal = "0.3"
rand_xorshift = "0.2"
env_logger = "0.8.1"
criterion = "0.3.2"

[features]
default = ["groth16", "pairing"]
gpu = ["ocl", "ff-cl-gen", "fs2"]
groth16 = []

blst = ["blstrs", "groth16"]
pairing = ["paired", "groth16"]

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]


[[bench]]
name = "lc"
harness = false
